codepkg/objects/Label_Division__c.object
<CustomObject>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <label>Label</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PL</fullName>
                </value>
                <value>
                    <fullName>NL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Market_Segment__c</fullName>
        <formula>TEXT(Retailer_Code_Name__r.Market_Segment__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Market Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retailer_Brand__c</fullName>
        <label>Retailer Brand</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retailer_Code_Name__c</fullName>
        <label>Retailer Code Name</label>
        <referenceTo>Retailer_Code__c</referenceTo>
        <relationshipLabel>Label_Divisions</relationshipLabel>
        <relationshipName>Label_Divisions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Label_Division</label>
    <nameField>
        <displayFormat>RLD-{00000000}</displayFormat>
        <label>Label_Division Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Label_Divisions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>